CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base{
  body {
    font-family: 'Inter', sans-serif;
    font-size: 16px;
    scroll-behavior: smooth;
    color: #999999;
    line-height: 1.7;
    overflow-x: hidden;
    height: 100vh;
  }
  
  img {
    max-width: 100%;
  }
  a {
    text-decoration: none;
  }
  
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }
  svg{
    color: white;
  }
  i{
    color: white;
    font-size: 14px;
  }
}

@layer components{
 .Btn{
  @apply w-full uppercase bg-Green text-black border-2 border-green-500 rounded-full transition duration-500 ease-in px-14 py-3 hover:bg-transparent hover:text-Green;
 }
 .Rounded{
  @apply border-2 border-[#565656] text-Primary w-[50px] h-[50px] rounded-full transition duration-200 hover:text-Green hover:border-Green;
 }
 .Heading{
  @apply border border-Primary rounded-3xl px-[18px] py-[9px] uppercase text-white inline-flex justify-center items-center space-x-3 font-light text-xs;
 }
 .SkillBox{
  @apply relative rounded-[85px] pt-[54px] pb-[48px] px-14 border-2 border-Primary flex flex-col space-y-6 justify-center items-center mb-10 hover:border-Green transition duration-500;
 }
 .SliderBtn{
  @apply bg-transparent border border-Primary hover:bg-transparent hover:text-Green hover:border-Green;
 }
 .BrandImageHover{
 @apply opacity-30 transition-all duration-500 hover:opacity-100;
 }
 .ContactPlaceHolder{
  @apply placeholder-Primary placeholder:opacity-50 border-none bg-transparent focus:outline-none py-2 placeholder:text-lg;
 }
 .SelectOption{
 @apply bg-black p-2 text-white rounded-md cursor-pointer;
 }
 .UniversalPadding{
  @apply px-4 sm:px-6 md:px-10 lg:px-0;
}
.main{
  @apply pb-10 md:mb-5 lg:pb-0;
}
}
 

